# polyglot

./: .eslintignore  .eslintrc.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  buffer.go  buffer_test.go  content.go  content_test.go  decode.go  decode_test.go  decoder.go  decoder.rs  decoder.test.ts  decoder.ts  decoder_test.go  encode.go  encode_test.go  encoder.go  encoder.rs  encoder.test.ts  encoder.ts  encoder_test.go  eslint.config.mjs  go.mod  go.sum  index.ts  integration.rs  integration.test.ts  kind.rs  kind.ts  lib.rs  package-lock.json  package.json  polyglot.h  polyglot.h.in  polyglot.pc  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: benchmarks.yaml  lint.yaml  lint.yml  releases.yaml  tests.yaml  version.yaml
.trunk/: .gitignore  trunk.yaml
benchmarks/: Makefile  bench.proto  go.mod  go.sum  main_test.go  vtproto_test.go
benchmarks/vtproto/: Makefile  go.mod  main_test.go
c_bindings/: Cargo.toml  bindings.h  build.rs  decoder.rs  encoder.rs  kind.rs  lib.rs  polyglot.h  types.rs
c_bindings/tests/: polyglot_test.c
generator/golang/: generator.go  headers.go  imports.go  structs.go
generator/proto/: defaults.go  generator.go  structs.go
protoc-gen-go-polyglot/: main.go
protoc-gen-go-polyproto/: main.go
protoc-gen-polyglot-go/: main.go
protoc-gen-rs-polyglot/: main.go
protoc-gen-ts-polyglot/: main.go
templates/: decode.templ  headers.templ
tests/: decoder.rs  encoder.rs
utils/: utils.go
v2/: buffer.go  encode.go  encoder_test.go  error.go  go.mod  go.sum
(+75 files in other folders)
