[package]
name = "c_bindings"
version = "1.1.3"
edition = "2021"
description="A high-performance serialization framework used for encoding and decoding arbitrary datastructures across languages."
license = "Apache-2.0"
repository = "https://github.com/loopholelabs/polyglot"
readme = "README.md"
keywords = ["polyglot", "serialization", "deserialization", "encoding", "decoding"]

[lib]
path = "lib.rs"
name = "polyglot"
crate-type = ["cdylib"]

[dependencies]
polyglot_rs = { path = "../" }

[build-dependencies]
cbindgen = "0.24.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
